--- a/.github/workflows/jekyll-gh-pages-reuse.yml
+++ b/.github/workflows/jekyll-gh-pages-reuse.yml
@@ -12,6 +12,10 @@ on:
   workflow_dispatch:
 jobs:
   call_reusable_build:
+    permissions:
+      pages: write
+      #id-token: write
+      contents: write
     # Reference the reusable workflow in repo2
     uses:  cainam/cainam.github.io/.github/workflows/jekyll-gh-pages.yml@main
 #    with:
